--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@angular/compiler": "~9.1.11",
     "@angular/core": "~9.1.11",
     "@angular/forms": "~9.1.11",
+    "@angular/localize": "~9.1.11",
     "@angular/material": "^9.2.4",
+    "@angular/material-moment-adapter": "^10.1.2",
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "admin-lte": "^3.0.5",
     "angular2-notifications": "^9.0.0",
+    "bootstrap": "^4.4.0",
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
