--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "@angular/forms": "~9.1.11",
     "@angular/localize": "~9.1.11",
     "@angular/material": "^9.2.4",
-    "@angular/material-moment-adapter": "^10.1.2",
+    "@angular/material-moment-adapter": "^10.1.3",
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "admin-lte": "^3.0.5",
     "angular2-notifications": "^9.0.0",
-    "bootstrap": "^4.4.0",
+    "bootstrap": "^4.5.2",
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -37,9 +37,9 @@
     "@angular-devkit/build-angular": "~0.901.9",
     "@angular/cli": "~9.1.9",
     "@angular/compiler-cli": "~9.1.11",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.54",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -50,7 +50,7 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "~3.8.3"
   }
 }
