--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "admin-lte": "^3.0.5",
     "angular2-notifications": "^9.0.0",
     "bootstrap": "^4.5.2",
+    "ng-select2": "^1.2.2",
+    "ngx-mat-select-search": "^3.1.0",
     "ngx-toastr": "^13.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
